--- a/css/all.css
+++ b/css/all.css
@@ -1,5 +1,5 @@
 body {
 	font-family: Arial, sans-serif;
 	background-color: grey;
-	color: #0FDDAF; /* Turqoise, hopefully */
+	color: #DDD; /* Off-white */
 }
